# linux-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  deny.toml  justfile  rust-toolchain  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/examples/: shellcode.rs
agent/src/: error.rs  lib.rs
bluetooth/: Cargo.toml
bluetooth/examples/: btlist.rs
debugger/: Cargo.toml
debugger/src/: error.rs  lib.rs  main.rs  ptrace.rs
debugger/tests/: ptrace_tests.rs
examples/: signal_handling.rs  wait_for_child.rs
netlink/: Cargo.toml
netlink/examples/: dev.rs  iface.rs  scan.rs
netlink/src/: ap_scanner.rs  cmd.rs  lib.rs  types.rs
poll/: Cargo.toml
poll/src/: lib.rs  main.rs  poll.rs  poll_sys.rs
shellcode/: Cargo.toml
shellcode/src/: main.rs
src/: error.rs  fd.rs  lib.rs  signal.rs  stdio.rs
syscall-rs/: Cargo.toml
syscall-rs/examples/: dropper.rs  fork_sh.rs  hollow_memfd.rs  hollow_ptrace.rs  injection.rs  mount_bind.rs  reverse_tcp.rs  shellcode.rs  signal_handling.rs
syscall-rs/src/: elf.rs  error.rs  fd.rs  lib.rs  macros.rs  memory.rs  signal.rs  wait.rs
tests/: wait_child.rs
tools/delay/: Cargo.toml
tools/delay/src/: main.rs
vpn/: Cargo.toml
vpn/assets/: Dockerfile  run_client.sh  run_docker.sh  run_server.sh
vpn/src/: error.rs  lib.rs  main.rs  poll.rs
wayland/: Cargo.toml
wayland/src/: error.rs  main.rs
wifi/: Cargo.toml
wifi/examples/: list_interfaces.rs  list_stations.rs
