
[workspace]
members = ["netlink","poll", "syscall-rs"]
exclude = ["debugger"]

resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
argh = { version = "0.1.13" }
libc = { version = "0.2.178" }
nix = { version = "0.30.1" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.17" }
log = { version = "0.4.29" }
env_logger = { version = "0.11.8" }

