
[workspace]
members = ["bluetooth", "netlink", "poll", "shellcode", "syscall-rs"]
exclude = ["debugger"]

resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
argh = { version = "0.1.13" }
env_logger = { version = "0.11.8" }
libc = { version = "0.2.178" }
log = { version = "0.4.29" }
nix = { version = "0.30.1" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
wl-nl80211 = { version = "0.4.0" }

[profile.obfuscate]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
