
[workspace]
members = ["bluetooth", "netlink", "poll", "syscall-rs", "vpn"]
exclude = ["debugger"]

resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
argh = { version = "0.1.18" }
bitflags = { version = "2.11.0" }
elf = { version = "0.8.0" }
env_logger = { version = "0.11.9" }
etherparse = { version = "0.19.0" }
libc = { version = "0.2.183" }
log = { version = "0.4.29" }
mio = { version = "1.1.1" }
nix = { version = "0.31.2" }
parking_lot = { version = "0.12.5" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
socket2 = { version = "0.6.3" }
thiserror = { version = "2.0.18" }
tun-tap = { version = "0.1.4" }
wl-nl80211 = { version = "0.4.0" }

[profile.obfuscate]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
