[package]
name = "syscall-rs"
version = "0.0.4"
authors = ["Andreas Doerr"]
description = "Support crate for Linux system programming"
repository = "https://github.com/adoerr/syscall-rs.git"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["linux", "system", "programming"]
categories = ["api-bindings"]

[lib]
name = "syscall"
doctest = false

[dependencies]
libc = { version = "0.2.153", features = [ "extra_traits" ] }
mio = { version = "0.8.11", features = [ "os-poll", "os-ext", "net" ] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { version = "1.0.82" }
env_logger = { version = "0.11.3" }
log = { version = "0.4.21" }
serial_test = { workspace = true }
