[package]
name = "syscall-rs"
version = "0.0.4"
authors = ["Andreas Doerr"]
description = "Support crate for Linux system programming"
repository = "https://github.com/adoerr/syscall-rs.git"
license = "Apache-2.0"
edition = "2024"
readme = "../README.md"
keywords = ["linux", "system", "programming"]
categories = ["api-bindings"]

[lib]
name = "syscall"
doctest = false

[dependencies]
libc = { workspace = true, features = [ "extra_traits" ] }
mio = { version = "1.1.1", features = [ "os-poll", "os-ext", "net" ] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { version = "0.11.8" }
log = { version = "0.4.29" }
