[package]
name = "syscall-rs"
version = "0.0.4"
authors = ["Andreas Doerr"]
description = "Support crate for Linux system programming"
repository = "https://github.com/adoerr/syscall-rs.git"
license = "Apache-2.0"
edition = "2024"
readme = "../README.md"
keywords = ["linux", "system", "programming"]
categories = ["api-bindings"]

[lib]
name = "syscall"
doctest = false

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true, features = [ "extra_traits" ] }
mio = { workspace = true, features = [ "os-poll", "os-ext", "net" ] }
nix = { workspace = true, features = ["process", "ptrace", "signal"] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
