[package]
name = "vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
env_logger = { workspace = true }
etherparse = { workspace = true }
log = { workspace = true}
nix = { workspace = true, features = ["socket", "event"]}
parking_lot = { workspace = true }
socket2 = { workspace = true }
tun-tap = { workspace = true }
thiserror = { workspace = true }