[package]
name = "wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
env_logger = {workspace = true}
log = {workspace = true}
thiserror = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true, features = ["client"] }

